[package]
name = "ethers-tx-handler"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple transaction handler for ethers-rs"
repository = "https://github.com/manasbir/ethers-tx-handler/"
readme = "README.md"
keywords = ["ethers", "ethereum", "transaction"]
categories = ["blockchain", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
serde = "1.0.183"
