[package]
name = "ethers-tx-handler"
version = "0.1.105"
edition = "2021"
license = "MIT"
description = "A simple transaction handler for ethers-rs"
repository = "https://github.com/manasbir/ethers-tx-handler/"
readme = "README.md"
keywords = ["ethers", "ethereum", "transaction"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
serde = "1.0.183"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["full"] }
